--- a/app/src/main/resources/templates/mypage/myAuthForm.html
+++ b/app/src/main/resources/templates/mypage/myAuthForm.html
@@ -42,7 +42,7 @@
       <!-- Page content wrapper-->
       <div id="page-content-wrapper">
         <div class="container-fluid">
-          <h2 class="mt-4">개인 정보 수정</h2>
+          <h2 class="mt-4 text-secondary">개인 정보 수정</h2>
           <div class="row">
             <div class="col-12 border">
               <!-- 개인 상세 정보 -->
@@ -53,6 +53,7 @@
               </table>
                 <br><button type="button" class="btn btn-outline-secondary" id="passwordCheckBtn">확인하기</button>
               </form>
+              <div class="line-2"></div>
             </div>
           </div>
           <!-- 테이블 부트스트랩 end -->
