--- a/app/src/main/resources/templates/mypage/myMain.html
+++ b/app/src/main/resources/templates/mypage/myMain.html
@@ -54,26 +54,25 @@
   <div id="page-content-wrapper">
     <div class="container-fluid mypagemain rounded">
       
+      <div class="row"></div>
+      <div class="line-2"></div>
+      
+      <!-- 마이페이지 메인화면 -->
       <div class="row">
-      
-      <h2 class="mt-4">마이페이지 메인화면</h2>
-      
-      
-      </div>
-      
+        <div class="col-4" style="margin-left: 120px">
 
-      <div class="row">
-        <div class="col-4 border rounded">
-
-          <!-- 프로필 사진 & 자기 소개 글 -->
+          <!-- 프로필 사진 -->
           <form action="updateProfile" id="updateProfileForm" method="post" enctype="multipart/form-data">
             <div>
             <div class="line-2"></div>
               <table>
                 <th class="fs-4 text-secondary">프로필 사진</th>
+                 <div class = "line-1"></div>
                 <tr>
                   <td>
-                    <img th:src="@{/member/files/{path}(path=${member.thumbnail})}" width="300px" height="280px">
+                    <center>
+                      <img th:src="@{/member/files/{path}(path=${member.thumbnail})}" rows='10' style="width: 55%; border-radius: 50%" >
+                    </center>
                   </td>
                 </tr>
                 <tr>
@@ -81,43 +80,41 @@
                     <label for="formFile" class="form-label"></label>
                     <input name="files" class="form-control" type="file" id="formFile" multiple>
                   </td>
-                  <td><br>
-                    <button type="submit" class="btn btn-outline-secondary" id="updateProfileBtn">수정</button>
-                  </td>
                 </tr>
               </table>
+              <div class="line-1"></div>
+                <button type="submit" class="btn btn-outline-secondary" id="updateProfileBtn">수정</button>
             </div>
           </form>
-        <div class = "line-3"></div>
         </div>
-        <div class="col-6 border rounded">
-        <div class = "line-2"></div>
         
+        <!-- 자기 소개 글  -->
+        <div class="col-3">
+        <div class = "line-2"></div>
+
           <form action="updateIntro" id="updateIntroForm" method="post">
             <div>
               <table>
                 <th class="fs-4 text-secondary">자기 소개</th>
                 <tr>
-                  <td><textarea name='intro' type='text' th:text="${member.intro}" rows='12' cols='80'
-                                placeholder="자기소개를 입력해주세요."></textarea></td>
-                </tr>
-                <tr>
-                  <td  style="text-align: right;">
-                    <button type="submit" class="btn btn-outline-secondary" id="updateIntroBtn">수정</button>
+                  <td>
+                    <textarea class="form-control" name='intro' type='text' th:text="${member.intro}" rows='10' style="width: 200%" placeholder="자기소개를 입력해주세요." autofocus></textarea>
                   </td>
                 </tr>
               </table>
             </div>
+            <div class="line-1"></div>
+            <button type="submit" class="btn btn-outline-secondary" id="updateIntroBtn">수정</button>
           </form>
         </div>
       </div>
       
       <br>
       <!-- 본인 작성 글 전체 리스트 -->
-      <div class="container" style="margin-left: -30px">
-        <div class="row">
-          <div class="col-12">
-            <table class="table">
+      <div class="container" style="margin-left: 90px">
+        <div class="row" style="width: 140%">
+          <div class="col-10">
+            <table class="table table-hover">
               <button type="button" class="btn btn-outline-secondary position-relative">
                 내가 작성한 전체 게시글
                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -127,17 +124,25 @@
                 </span>
               </button>
               <thead>
-              <tr>
+              <tr class="text-secondary">
                 <th scope="col">게시판</th>
                 <th scope="col">제목</th>
                 <th scope="col">작성일</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+  
               </tr>
               </thead>
               <tbody>
               <tr th:each="board : ${boards}">
                 <td th:text="${board.tableName}"></td>
-                <td th:if="${board.tableName == 'party'}"><a href="" th:href="@{/my/myPartyListDetail(no=${board.no})}" th:text="${board.title}"></a></td>
-                <td th:if="${board.tableName == 'feed'}"><a href="" th:href="@{/my/myFeedListDetail(no=${board.no})}" th:text="${board.title}"></a></td>
+                <td th:if="${board.tableName == 'party'}"><a href="" th:href="@{/my/myPartyListDetail(no=${board.no})}" th:text="${board.title}" class="text-dark"></a></td>
+                <td th:if="${board.tableName == 'feed'}"><a href="" th:href="@{/my/myFeedListDetail(no=${board.no})}" th:text="${board.title}" class="text-dark"></a></td>
                 <td th:text="${board.date}"></td>
               </tr>
               </tbody>
