--- a/app/src/main/resources/templates/admin/adminMain.html
+++ b/app/src/main/resources/templates/admin/adminMain.html
@@ -37,26 +37,26 @@
 <div class="d-flex" id="wrapper">
   <!-- Sidebar-->
   <div class="border-end bg-white" id="sidebar-wrapper">
-    <div class="sidebar-heading border-bottom bg-light">
+    <div class="sidebar-heading border-bottom bg-primary">
       <a th:href="@{/admin/main}" style="text-decoration-line: none; color: inherit;">관리자페이지</a>
     </div>
     <div class="list-group list-group-flush">
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/}">사이트 바로가기</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/admin/adminPartyList}">파티게시물 관리</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/admin/adminFeedList}">피드게시물 관리</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/admin/adminEventList}">이벤트게시물 관리</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/admin/adminMemberList}">회원 관리</a>
+      <a class="list-group-item list-group-item-action list-group-item-light p-3 text-bg-primary p-3" th:href="@{/}">사이트 바로가기</a>
+      <a class="list-group-item list-group-item-action list-group-item-light p-3 text-bg-primary p-3" th:href="@{/admin/adminPartyList}">파티게시물 관리</a>
+      <a class="list-group-item list-group-item-action list-group-item-light p-3 text-bg-primary p-3" th:href="@{/admin/adminFeedList}">피드게시물 관리</a>
+      <a class="list-group-item list-group-item-action list-group-item-light p-3 text-bg-primary p-3" th:href="@{/admin/adminEventList}">이벤트게시물 관리</a>
+      <a class="list-group-item list-group-item-action list-group-item-light p-3 text-bg-primary p-3" th:href="@{/admin/adminMemberList}">회원 관리</a>
     </div>
   </div>
   <!-- Page content wrapper-->
   <div id="page-content-wrapper">
     <div class="container-fluid">
-      <h2 class="mt-4">관리자페이지 메인</h2>
+      <h2 class="mt-4"> 관리자페이지 메인</h2>
 
       <!--  테이블 부트스트랩   -->
 
       <!-- 전체회원 -->
-      <div class="container">
+      <div class="container" style="margin-left: -10px;">
         <div class="row">
           <div class="col-6">
             <table class="table">
@@ -120,15 +120,15 @@
       </div>
 
       <!-- 파티 +  피드 + 이벤트 신규 게시글 limit:15 -->
-      <div class="container">
+      <div class="container" style="margin-left: -10px;">
         <div class="row">
           <div class="col-6">
             <table class="table">
               <button type="button" class="btn btn-primary position-relative">
                 전체 게시글
                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                      th:each="board : ${boards}"
-                      th:text="${boardStat.count}">
+                      th:each="boardCount : ${boardCount}"
+                      th:text="${boardCountStat.count}">
             <span class="visually-hidden">unread messages</span>
                 </span>
               </button>
