--- a/app/src/main/resources/templates/mypage/myProfile.html
+++ b/app/src/main/resources/templates/mypage/myProfile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>EAT-F by Chunderella</title>
+  <title>EAT-F</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="/css/notice/style.css" rel="stylesheet">
@@ -255,7 +255,7 @@
           alert('탈퇴되었습니다.')
           location.href="/"
         } else {
-          alert('그래 사이트 더 봐~')
+          alert('다시 한번 둘러보기')
         }
       }, error: function (jpXHR, status, error) {
         alert("다시!!!! [ " + error + " ]");
@@ -275,7 +275,7 @@
       data: {"no": memberNo, "outState": button},
       success: function (result) {
         if (result == "1") {
-          alert('탈퇴빠이')
+          alert('탈퇴 완료')
         } else {
           alert('탈퇴 진행이 취소되었습니다.')
         }
