--- a/app/bin/main/templates/mypage/myAuthForm.html
+++ b/app/bin/main/templates/mypage/myAuthForm.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>EAT-F by Chunderella</title>
+    <title>EAT-F</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="/css/notice/style.css" rel="stylesheet">
     <!-- TODO 추가 - 2 같지만 수정 -->
     <!-- Core theme CSS (includes Bootstrap)-->
     <!-- TODO 추가 - 1 -->
-    <link href="/css/notice/noticeStyles.css" rel="stylesheet" />undefined
-  </head>undefined<body>
+    <link href="/css/notice/noticeStyles.css" rel="stylesheet" />
+  </head>
+  <body>
     <!-------------------------------구분선-------------------------->
     <div class="b-example-divider"></div>
     <!------------------------------header------------------------------>
